[tool.poetry]
name = "plasma"
version = "0.2.0"
description = "PLAin State Machine Acquaintance"
authors = ["Gabriel Desmarchelier <gabriel.desmarchelier@cea.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tree-sitter = "^0.25"
tree-sitter-snl = "^0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
plasma = "plasma:main"
