[project]
name = "plasma"
version = "0.2.0"
description = "PLAin State Machine Acquaintance"
authors = [
  { name = "Gabriel Desmarchelier", email = "gabriel.desmarchelier@cea.fr" },
]
maintainers = [
  { name = "Gabriel Desmarchelier", email = "gabriel.desmarchelier@cea.fr" },
]
keywords = ["epics"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
]
readme = "README.md"
requires-python = ">= 3.10, <4.0"
dependencies = [
  "tree-sitter>=0.25.2",
  "tree-sitter-snl>=0.2.1",
]

[project.urls]
Issues = "https://github.com/epics-extensions/plasma/issues"
Source = "https://github.com/epics-extensions/plasma"

[project.scripts]
plasma = "plasma:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
